change the interface for events + audit logs
